# junglebeast

./: .gitignore  Cargo.toml  README.md  client  server
maps/: test.blend  test.glb
src/: client.rs  main.rs  network.rs  physics.rs  server.rs  shared.rs
src/components/: mod.rs  model.rs  physicsobject.rs  player.rs  point.rs  properties.rs  spawn.rs
src/network/: handler.rs  message.rs  mod.rs  setup.rs  utils.rs
src/serialization/: deserialize.rs  mod.rs  serialize.rs  server.rs
src/utils/: interval.rs
