[package]
name = "junglebeast"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "macros", "time"] }
hecs = "0.10.5"
macroquad = "0.4.14"
renet = "1.2.0"
renet_netcode = "1.2.0"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(server)'] }
