[package]
name = "junglebeast"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "macros", "time"] }
hecs = { version = "0.10.5", features = ["column-serialize"] }
macroquad = { version = "0.4.14", features = ["glam-serde"] }
renet = "1.2.0"
renet_netcode = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "1.3.3" }
bytemuck = "1.24.0"
easy-gltf = "1.1.5"
parry3d = { version = "0.25.3", features = ["serde-serialize"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
